Export words in global dictionary to jDV
RISDEV-7485